# codal-microbit-v2

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  README.md  build.py  library.json  module.json  target-locked.json  target.json
.github/tools/: gitchanges.py
.github/workflows/: build.yml  makecode.yml  micropython.yml  on-release.yml  size-diff.yml  update-changelog.yml
asm/: CortexContextSwitch.s
docs/: MemoryMap.md
docs/bluetooth/: MicroBitPartialFlashing.md
inc/: DataLogMailboxHandler.h  EmojiRecogniser.h  FSCache.h  JacdacMailbox.h  LSM303Accelerometer.h  LSM303Magnetometer.h  MicroBitAccelerometer.h  MicroBitAudio.h  MicroBitAudioProcessor.h  MicroBitBLEChar.h  MicroBitBLEService.h  MicroBitBLEServices.h  MicroBitCompass.h  MicroBitCompassCalibrator.h  MicroBitConfig.h  MicroBitDevice.h  MicroBitDisplay.h  MicroBitError.h  MicroBitFile.h  MicroBitFileSystem.h  MicroBitFlash.h  MicroBitLog.h  MicroBitMemoryMap.h  MicroBitMorseCodeRecogniser.h  MicroBitMorseCommunicator.h  MicroBitMorseInterpreter.h  MicroBitMorseMessage.h  MicroBitMorsePlayer.h  MicroBitMorseRecogniser.h  MicroBitPowerManager.h  MicroBitRadio.h  MicroBitRadioDatagram.h  MicroBitRadioEvent.h  MicroBitSoundRecogniser.h  MicroBitStorage.h  MicroBitThermometer.h  MicroBitUSBFlashManager.h  MicroBitUtil.h  MicroSynth.h  Mixer2.h  (+12 more)
inc/bluetooth/: MicroBitAccelerometerService.h  MicroBitBLEManager.h  MicroBitBLETypes.h  MicroBitButtonService.h  MicroBitDFUService.h  MicroBitEddystone.h  MicroBitEventService.h  MicroBitIOPinService.h  MicroBitLEDService.h  MicroBitMagnetometerService.h  MicroBitPartialFlashingService.h  MicroBitTemperatureService.h  MicroBitUARTService.h  MicroBitUtilityService.h  MicroBitUtilityTypes.h
inc/compat/: DigitalIn.h  DigitalOut.h  InterruptIn.h  MbedMemberFunctionCallback.h  MbedTimer.h  MicroBitButton.h  MicroBitCompat.h  MicroBitFiber.h  MicroBitI2C.h  MicroBitSerial.h  PwmOut.h  Ticker.h  Timeout.h  mbed.h  yotta_cfg_mappings.h
ld/: nrf52832.ld  nrf52833-softdevice-s140.ld  nrf52833-softdevice.ld  nrf52833.ld
lib/: README.md
model/: MicroBit.cpp  MicroBit.h  MicroBitIO.cpp  MicroBitIO.h
nRF5SDK_mods/: ble_dfu_bonded.c  drv_rtc.c  nrf_log_backend_dmesg.c  nrf_log_backend_dmesg.h  nrf_pwr_mgmt.c  nrf_sdh.c  nrf_sdh_soc.c  nrf_sdh_soc.h
resources/logfs/: .gitignore  README.md  basic-header.html  build.js  default-header.html  dl.css  dl.js  dl2.js  header.html  nextgen-header.html  package-lock.json  package.json  sample-full-log.txt  sample-invalid-time-series-1.txt  sample-invalid-time-series-2.txt  sample-invalid-time-series.txt  sample-partially-cleared.txt  sample-single-column-noheader.txt  sample-time-series-nonsequential.txt  sample-time-series.txt  sample-trailer-dirty.js  sample-trailer-dirty.txt  sample-trailer-noheader.txt  sample-trailer.txt
resources/logfs/react/datalog/: package-lock.json  package.json  tsconfig.json
resources/logfs/react/datalog/public/: index.html
resources/logfs/react/datalog/src/: App.css  App.tsx  Button.css  Button.tsx  DataLog.ts  DataLogTable.css  DataLogTable.tsx  DropDownButton.tsx  DropDownMenu.css  DropDownMenu.tsx  Header.css  Header.tsx  LineGraphVisualisation.css  LineGraphVisualisation.tsx  MapVisualisation.css  MapVisualisation.tsx  Modal.css  Modal.tsx  index.css  index.tsx  sample-data.ts
resources/logfs/sample-trailers/: default-invalid-time-series.txt  default-noheader.txt  default-sample.js  nextgen-sample.txt
resources/logfs/samples/: README.md
samples/: fft_example.cpp  main.cpp
sdk_config/: sdk_config.h
source/: DataLogMailboxHandler.cpp  EmojiRecogniser.cpp  FSCache.cpp  JacdacMailbox.cpp  JacdacMailboxHandler.cpp  LSM303Accelerometer.cpp  LSM303Magnetometer.cpp  MbedTimedInterruptIn.cpp  MicroBitAccelerometer.cpp  MicroBitAudio.cpp  MicroBitAudioProcessor.cpp  MicroBitCompass.cpp  MicroBitCompassCalibrator.cpp  MicroBitCompat.cpp  MicroBitDevice.cpp  MicroBitDisplay.cpp  MicroBitFile.cpp  MicroBitFileSystem.cpp  MicroBitFlash.cpp  MicroBitLog.cpp  MicroBitMemoryMap.cpp  MicroBitMorseCodeRecogniser.cpp  MicroBitMorseCommunicator.cpp  MicroBitMorseInterpreter.cpp  MicroBitMorseMessage.cpp  MicroBitMorsePlayer.cpp  MicroBitMorseRecogniser.cpp  MicroBitPowerManager.cpp  MicroBitRadio.cpp  MicroBitRadioDatagram.cpp  MicroBitRadioEvent.cpp  MicroBitSoundRecogniser.cpp  MicroBitStorage.cpp  MicroBitThermometer.cpp  MicroBitUSBFlashManager.cpp  MicroSynth.cpp  Mixer2.cpp  MorseEncoder.cpp  NRF52DmaLedMatrix.cpp  NRF52FlashManager.cpp  (+11 more)
source/bluetooth/: MicroBitAccelerometerService.cpp  MicroBitBLEChar.cpp  MicroBitBLEManager.cpp  MicroBitBLEService.cpp  MicroBitBLEServices.cpp  MicroBitBLETypes.cpp  MicroBitButtonService.cpp  MicroBitButtonService.unused  MicroBitEddystone.cpp  MicroBitEventService.cpp  MicroBitEventService.unused  MicroBitIOPinService.cpp  MicroBitIOPinService.unused  MicroBitLEDService.cpp  MicroBitMagnetometerService.cpp  MicroBitMagnetometerService.unused.  MicroBitPartialFlashingService.cpp  MicroBitTemperatureService.cpp  MicroBitUARTService.cpp  MicroBitUARTService.unused  MicroBitUtilityService.cpp
source/compat/: MbedMemberFunctionCallback.cpp  MicroBitButton.cpp  MicroBitI2C.cpp  MicroBitSerial.cpp
utils/cmake/: util.cmake
